Name:                hsb2hs
Version:             0.1
Synopsis:            Preprocesses a file, adding binary blobs.
License:             BSD3
License-file:        LICENSE
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Copyright:           Copyright (C) 2010 John MacFarlane
Category:            Development
Cabal-version:       >=1.2
Build-type:          Simple
Data-files:          Setup.sample.hs
Executable hsb2hs
    Main-is: hsb2hs.hs
    Ghc-Options: -Wall
    Build-depends: base >= 4, containers, bytestring, directory,
                     filepath, preprocessor-tools > 0.1 && < 0.2

